alignment issues

--- a/src/scss/blocks/_blocks.scss
+++ b/src/scss/blocks/_blocks.scss
@@ -26,7 +26,59 @@
 			margin-bottom: 0 !important;
 			max-width: none !important;
 		}
+		&.has-custom-content-position {
+			.wp-block-cover__inner-container {
+				margin-left: 0;
+				margin-right: 0;
+			}
+			
+			// &.is-position-top-left {
+			// 	align-items: flex-start;
+			// 	justify-content: flex-start
+			// }
+		
+			// &.is-position-top-center {
+			// 	align-items: flex-start;
+			// 	justify-content: center
+			// }
+		
+			// &.is-position-top-right {
+			// 	align-items: flex-start;
+			// 	justify-content: flex-end
+			// }
+		
+			// &.is-position-center-left {
+			// 	align-items: center;
+			// 	justify-content: flex-start
+			// }
+		
+			// &.is-position-center-center {
+			// 	align-items: center;
+			// 	justify-content: center
+			// }
+		
+			// &.is-position-center-right {
+			// 	align-items: center;
+			// 	justify-content: flex-end
+			// }
+		
+			// &.is-position-bottom-left {
+			// 	align-items: flex-end;
+			// 	justify-content: flex-start
+			// }
+		
+			// &.is-position-bottom-center {
+			// 	align-items: flex-end;
+			// 	justify-content: center
+			// }
+		
+			// &.is-position-bottom-right {
+			// 	align-items: flex-end;
+			// 	justify-content: flex-end
+			// }
+		}
 	}
+	
 }
 
 @mixin wp-block-image {
